fix: change navbar brand color to black for improved visibility in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a:focus {
 
 .navbar-brand,
 .navbar-brand:hover {
-  color: #0878a0;
+  color: #000000;
   font-size: 15px;
   font-weight: 600;
   text-transform: uppercase;
